--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "socket.io-client": "^4.8.0"
